fix: webauthn dashboard for sqlserver
(cherry picked from commit a28f663de5064a204c4c7808b8a3bd6afc58eaf0)

# Conflicts:
#	gravitee-am-management-api/gravitee-am-management-api-service/src/main/java/io/gravitee/am/management/service/impl/AnalyticsServiceImpl.java